Improving theme on devices

--- a/docroot/sites/all/themes/escrow/sass/partials/components/blocks/_listings_sliders.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/blocks/_listings_sliders.scss
@@ -11,6 +11,9 @@
     a {
       color: $color_gray_dark;
     }
+    a:hover {
+      color: black;
+    }
   }
 }
 
@@ -22,7 +25,7 @@
   @include breakpoint($bp800) {
     @include float-span(4, 'last');
 
-    h2 {
+    header h2 {
       display: none;
     }
   }
