Styling drealty listings and micro-teaser view mode

--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -12,6 +12,7 @@
 @import 'general/pager';
 @import 'general/horizontal_scroller';
 @import 'general/flexslider';
+@import 'general/homepage';
 @import 'blocks/footer';
 @import 'blocks/listings_sliders';
 @import 'listing/listing';
