--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -115,8 +115,8 @@
     font-weight: bold;
   }
 
-  .group_listing_statistics,
-  .group_listing_location_details {
+  .group_statistics,
+  .group_location_details {
     padding: $spacing_default;
     margin: $spacing_default;
     background: white;
