--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -9,10 +9,29 @@
 // Base Import
 ////////////////////////
 @import 'partials/global/base';
+@import 'partials/components/general/general';
+@import 'partials/components/header/logo';
+
+$grids: 12;
+$gutters: 1/4;
+$output: 'isolation';
+
+.print-content {
+  clear: both;
+}
 
 .listing {
   &.printer-friendly {
     text-transform: uppercase;
+    width: 980px; /* needed for PDF */
+    margin: 0 auto;
+
+    .group-left {
+      @include float-span(5);
+    }
+    .group-right {
+      @include float-span(7, 'last');
+    }
 
     p {
       margin: 0;
@@ -21,14 +40,25 @@
       background: $color_gray;
       text-align: center;
       padding: $spacing_default;
+      margin-top: 0;
       border: 1px solid black;
+      width: 100%;
     }
     .field {
+      white-space: nowrap;
       margin: $spacing_default 0;
+      clear: both;
+      &:first-child {
+        margin-top: 0;
+      }
 
       .field-label {
-        width: 13em;
-        font-size: .85em;
+        /*width: 13em;
+        margin-right: $spacing_default;*/
+        width: 35%;
+        margin-right: 1%;
+        font-size: .75em;
+        line-height: 1.25em;
         display: inline-block;
         text-align: right;
         color: black;
@@ -36,11 +66,13 @@
       }
       .field-items {
         display: inline-block;
+        width: 64%;
 
         .field-item {
           padding: $spacing_default;
           border: 1px solid black;
-          width: 15em;
+          /*width: 14.5em;*/
+          width: 100%;
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -54,11 +86,18 @@
           }
         }
       }
+      &.field-name-field-listing-photos img {
+        max-width: 32%;
+        margin-right: 1%;
+        margin-bottom: 1%;
+        float: left;
+      }
     }
 
     table.measurements-grid {
       border-spacing: $spacing_default $spacing_default;
-      border-collapse: separate;
+      margin-bottom: 2 * $spacing_default;
+      width: 100%;
 
       th {
         color: black;
@@ -74,11 +113,13 @@
       tr {
         th {
           text-align: right;
+          width: 10em;
+          padding-right: 0;
         }
       }
       td {
         border: 1px solid black;
-        width: 10em;
+        min-width: 8em;
         height: 2em;
       }
     }
