--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -25,6 +25,7 @@ $output: 'isolation';
     text-transform: uppercase;
     width: 980px; /* needed for PDF */
     margin: 0 auto;
+    font-size: .8em;
 
     .group-left {
       @include float-span(5);
@@ -40,7 +41,7 @@ $output: 'isolation';
       background: $color_gray;
       text-align: center;
       padding: $spacing_default;
-      margin-top: 0;
+      margin: 0;
       border: 1px solid black;
       width: 100%;
     }
@@ -53,8 +54,6 @@ $output: 'isolation';
       }
 
       .field-label {
-        /*width: 13em;
-        margin-right: $spacing_default;*/
         width: 35%;
         margin-right: 1%;
         font-size: .75em;
@@ -80,7 +79,15 @@ $output: 'isolation';
       }
 
       &.field-name-field-listing-personal-property {
+        .field-label {
+          display: block;
+          width: 100%;
+          text-align: left;
+        }
         .field-items {
+          width: 100%;
+          display: block;
+
           .field-item {
             white-space: normal;
           }
