Adding a sale pending flag

--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -25,6 +25,7 @@ $color_gold: #ECB429;
 $color_gray: #CCC;
 $color_gray_light: #EEE;
 $color_gray_dark: #999;
+$color_red: #940b24;
 
 ///////////////////////
 // Text
