--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -89,8 +89,8 @@
   }
 
   .mls-number {
-    color: $color_gray_dark;
     font-size: .75em;
+    margin: $spacing_default 0;
   }
 
   .listing-title {
@@ -207,6 +207,53 @@
       font-weight: bold;
       font-size: $font_size_base;
     }
+  }
+
+  .photo-wrap {
+    position: relative;
+  }
+
+  .sale-pending-flag {
+    width: 110px;
+    height: 120px;
+    overflow: hidden;
+    position: absolute;
+    top: -3px;
+    left: -3px;
+
+    .sale-pending-text{
+      display: block;
+      font: bold 15px Sans-Serif;
+      color: #333;
+      text-align: center;
+      @include text-shadow(rgba(darken($color_gray_dark, 25%), .5) 0 1px 0);
+      @include rotate(-45deg);
+      position: relative;
+      padding: 7px 0;
+      left: -35px;
+      top: 27px;
+      width: 155px;
+      background-color: $color_red;
+      color: white;
+      @include box-shadow(0 0 3px rgba($color_gray_dark, .3));
+
+      &::before,
+      &::after {
+        content: "";
+        border-top:   3px solid darken($color_red, 25%);
+        border-left:  3px solid transparent;
+        border-right: 3px solid transparent;
+        position:absolute;
+        bottom: -3px;
+      }
+      &::before {
+        left: 0;
+      }
+      &::after {
+        right: 0;
+      }
+    }
+
   }
 
   @include breakpoint($bp500) {
