Improving the workbench page

--- a/docroot/sites/all/themes/shiny/css/style.css
+++ b/docroot/sites/all/themes/shiny/css/style.css
@@ -847,6 +847,7 @@ select.form-select {
   border-top-color: #999;
   background: #fff;
   color: #333;
+  box-sizing: border-box;
 }
 
 input.form-text:focus,
