--- a/docroot/sites/all/themes/shiny/scss/style.scss
+++ b/docroot/sites/all/themes/shiny/scss/style.scss
@@ -697,6 +697,7 @@ select.form-select {
   border-top-color: #999;
   background: #fff;
   color: #333;
+  box-sizing: border-box;
 }
 input.form-text:focus,
 input.form-file:focus,
