--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -22,6 +22,7 @@ $color_green:    #125819;
 $color_green_light: lighten($color_green, 10%);
 $color_green_very_light: lighten($color_green, 25%);
 $color_gold: #ECB429;
+$color_gold_light: #D8D4C9;
 $color_gray: #CCC;
 $color_gray_light: #EEE;
 $color_gray_dark: #999;
