Adding longitude and latitude fields in case the map is innacurate

--- a/docroot/sites/all/themes/escrow/sass/partials/components/blocks/_listings_sliders.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/blocks/_listings_sliders.scss
@@ -7,6 +7,7 @@
     display: block;
     text-align: center;
     margin: .5 * $spacing_default $spacing_default 0 0;
+    clear: both;
 
     a {
       color: $color_gray_dark;
