--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -37,6 +37,10 @@
     position: relative;
     @include border-radius();
 
+    img {
+      max-width: none;
+    }
+
     #listing-map {
       min-height: 100%;
       background: url("../images/loading.gif") center center no-repeat;
