Styling the RETS listing page

--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_drealty_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_drealty_listing.scss
@@ -16,4 +16,11 @@
       }
     }
   }
+
+  .group-mls-photos {
+    @include breakpoint($bp800) {
+      @include float-span(4);
+    }
+    margin-right: 0;
+  }
 }
