--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -251,6 +251,9 @@
     .group-listing-location-details {
       @include float-span(2, 'last');
     }
+    .listing-office {
+      @include float-span(2, 'last');
+    }
     #listing-map-wrapper {
       @include float-span(2, 'last');
     }
