Styling the lading pages

--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -13,6 +13,7 @@
 @import 'general/horizontal_scroller';
 @import 'general/flexslider';
 @import 'general/homepage';
+@import 'general/marketing';
 @import 'blocks/footer';
 @import 'blocks/listings_sliders';
 @import 'listing/listing';
