--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -48,7 +48,7 @@
       background-color: $color_gray_light;
 
       &.no-map {
-        background: url("../images/no-map.png") center center no-repeat;
+        background: url("../images/no-map.jpg") center center no-repeat;
         background-size: 100%;
         background-clip: content-box;
       }
