--- a/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/global/_variables.scss
@@ -10,10 +10,12 @@
 ///////////////////////
 $bp400: 400px;
 $bp500: 500px;
+$bp500-800: 500px 800px;
 $bp650: 650px;
 $bp800: 800px;
+$bp900: 900px;
 $bp1075: 1075px;
-
+$bp800-900: 800px 900px;
 
 ///////////////////////
 // Colors
