Adding a contact form to term pages

--- a/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/_components.scss
@@ -20,6 +20,7 @@
 @import 'listing/teaser';
 @import 'listing/micro_teaser';
 @import 'listing/drealty_listing';
+@import 'general/terms';
 @import 'search/search_form';
 @import 'header/header';
 @import 'header/logo';
