--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -307,12 +307,9 @@
 
 .view-page-listing-teasers {
   @include breakpoint($bp800) {
-    margin: 1em 0 0 2em;
+    margin: 0 0 0 2em;
     @include clearfix();
 
-    .views-row {
-      @include float-span(5);
-    }
     .pager {
       clear: both;
     }
@@ -320,7 +317,6 @@
 
   @include breakpoint($bp1075) {
     .views-row {
-      @include float-span(4);
       clear: none;
     }
   }
