Adding a message to nodes with a status of 0

--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
@@ -48,6 +48,10 @@ sup {
   font-weight: bold;
 }
 
+.node-unpublished {
+  background-color: transparent;
+}
+
 .more-link {
   display: inline-block;
   padding: 0 (.5 * $spacing_default);
