Simplifying the imagefield focus admin

--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -147,6 +147,7 @@
   width: 49%;
   float: left;
   margin-right: 1%;
+  display: none;
 }
 .node-listing-form .image-widget-data .form-item .description {
   white-space: normal;
