--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -192,10 +192,20 @@
         display: block;
         margin-bottom: $spacing_default;
       }
+
+      .meet-our-agents {
+        display: block;
+        color: $color_green;
+        font-size: .75em;
+        text-align: center;
+        margin-top: 2 * $spacing_default;
+        padding-top: $spacing_default;
+        border-top: 1px solid $color_gray;
+      }
     }
     .agents-title {
       font-weight: bold;
-      font-size: $font_size_base;
+      font-size: .8 * $font_size_base;
     }
   }
 
