--- a/docroot/sites/all/themes/escrow/sass/partials/components/header/_header.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/header/_header.scss
@@ -8,6 +8,10 @@
     linear-gradient(top, $color_gray_light, $color_gray)
   );
   border-bottom: 3px solid $color_gold;
+
+  .lt-ie9 & {
+    background-image: url("../images/lake.jpg");
+  }
 }
 
 #offices {
@@ -47,6 +51,35 @@
   }
 
   @include breakpoint($bp800) {
+    font-size: 1.05 * $font_size_base;
+    .office-phone {
+      font-size: 1.05 * $font_size_title;
+    }
+
+    li:first-child {
+      margin: 5 * $spacing_default 0 0 0;
+    }
+    li {
+      margin: 5 * $spacing_default 0 0 0;
+    }
+  }
+
+  .lt-ie9 & {
+    .office-phone {
+      font-size: $font_size_title;
+    }
+
+    @include float-span(4, 'last');
+
+    li:first-child {
+      margin: 9 * $spacing_default 0 0 0;
+    }
+    li {
+      width: 50%;
+      float: left;
+      margin: 9 * $spacing_default 0 0 0;
+    }
+
     font-size: 1.05 * $font_size_base;
     .office-phone {
       font-size: 1.05 * $font_size_title;
