--- a/docroot/sites/all/themes/escrow/sass/partials/components/header/_logo.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/header/_logo.scss
@@ -15,4 +15,10 @@
     width: 160px;
     height: 110px;
   }
+
+  .lt-ie9 & {
+    background-image: url('../images/c21hull_logo_white_ie.png');
+    @include float-span(3, 'first');
+    width: 160px;
+  }
 }
